fixed scrollbar on the info page thingy

--- a/app/style/info.sass
+++ b/app/style/info.sass
@@ -1,8 +1,8 @@
 .info
   position: fixed
   width: 100%
-  min-height: 100vh
-  overflow: hidden
+  height: 100vh
+  overflow: auto
   background: $info-background
   top: 0
   right: 0
